[FIX] web_enterprise: home_menu: truncated labels
Prior to this commit, the introduction of Milk allowed the app switcher
to be on two lines. But they were not truncated when they were composed
of a long word.

To fix this, this commit reverts to a one-line label that can be
truncated if necessary.

task-3329928
Part of task-3326263

closes odoo/enterprise#41298

X-original-commit: 5b04371dbbdcc9394d482c84db819292299c397c

--- a/web_enterprise/static/src/webclient/home_menu/home_menu.scss
+++ b/web_enterprise/static/src/webclient/home_menu/home_menu.scss
@@ -81,9 +81,6 @@
         }
 
         .o_caption {
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 2;
             color: var(--homeMenuCaption-color, #{$o-home-menu-caption-color});
             text-shadow: $o-home-menu-caption-shadow;
         }
@@ -93,10 +90,6 @@
             outline: 1px solid $o-action;
             border-radius: $border-radius;
         }
-    }
-
-    &:not(.o_ios_app) .o_caption {
-        height: ($font-size-base * $line-height-sm) * 2;
     }
 
     // iOS iPhone list layout due to Apple AppStore review
